# skill-weft

./: .gitignore  README.md  pyproject.toml
docs/: architecture.md  vision.md
docs/plans/: 2026-06-09-hybrid-skillhub-architecture.md  2026-06-09-hybrid-skillweft-architecture.md  2026-06-09-skillhub-mvp.md  2026-06-09-skillweft-mvp.md
docs/research/: 2026-06-09-public-name-research.md  2026-06-09-source-excerpts.md  2026-06-09-user-adoption-and-integration-strategy.md
docs/testing/: olla-real-world-tests.md
examples/skills/: python-debugging.md
src/skillhub/: __init__.py  cli.py  maintenance.py  packer.py  router.py
src/skillweft/: __init__.py  cli.py  models.py  packer.py  registry.py  router.py  token_budget.py
src/skillweft/adapters/: __init__.py  base.py  claude.py  codex.py  cursor.py  gemini.py  hermes.py
src/skillweft/realworld/: __init__.py  olla.py
tests/: test_adapters.py  test_cli_phase1.py  test_maintenance.py  test_models.py  test_olla_api_real_world.py  test_olla_real_world_config.py  test_packer.py  test_registry.py  test_router.py  test_token_budget.py
