[project]
name = "skill-weft"
version = "0.1.0"
description = "Portable skill registry and context router for AI coding/agent tools"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
skillweft = "skillweft.cli:main"
skillhub = "skillweft.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
